<resources>
    <string name="app_name">MyMemories</string>
    <string name="action_settings">Settings</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_e_mail_adress">Enter e-mail adress</string>
    <string name="enter_login">Enter login</string>
    <string name="registration_user">Регистрация пользователя</string>
    <string name="login">Логин:</string>
    <string name="password">Пароль:</string>
    <string name="e_mail">E-mail:</string>
    <string name="registration">Регистрация</string>
    <string name="authorization">Авторизация</string>
    <string name="enter">Войти</string>
    <string name="register">Не зарегистрированы? Зарегистрироваться</string>
</resources>
